# ski-analyzer

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.agents/skills/generate-types/: SKILL.md
scripts/: generate-types.ts
src/: collection.rs  config.rs  error.rs  gpx_analyzer.rs  index.html  iter.rs  main.rs  main.ts  multipolygon.rs  multipolygon_test.rs  osm_query.rs  osm_reader.rs  osm_reader_test.rs  ski_area.rs  styles.css  test_util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ski-analyzer-lib/: Cargo.toml
src-tauri/ski-analyzer-lib/src/: config.rs  error.rs  gpx_analyzer.rs  lib.rs  main.rs  multipolygon.rs  multipolygon_test.rs  osm_query.rs  osm_reader.rs  osm_reader_test.rs  ski_area.rs  time_ser.rs  typescript_gen.rs  utils.rs
src-tauri/ski-analyzer-lib/src/gpx_analyzer/: gpx_parser.rs  gpx_parser_test.rs  moving.rs  segments.rs  segments_ser.rs  segments_test.rs  test_util.rs  use_lift.rs  use_lift_test.rs  waypoint_ser.rs
src-tauri/ski-analyzer-lib/src/gpx_analyzer/moving/: find_pistes.rs  find_pistes_test.rs  move_type.rs  process.rs  process_test.rs  simple_candidate.rs  simple_candidate_test.rs
src-tauri/ski-analyzer-lib/src/gpx_analyzer/moving/find_pistes_test/: piste_data.rs  segment_data.rs
src-tauri/ski-analyzer-lib/src/json_schema/: geo.rs  geo_test.rs  mod.rs  ski_analyzer.rs  time.rs  time_test.rs
src-tauri/ski-analyzer-lib/src/ski_area/: geo_test.rs  lift.rs  lift_test.rs  piste.rs  piste_test.rs  schema_test.rs
src-tauri/ski-analyzer-lib/src/typescript_gen/: geo.rs  gpx_analyzer.rs  mod.rs
src-tauri/ski-analyzer-lib/src/utils/: bounded_geometry.rs  cancel.rs  cancel_test.rs  collection.rs  gpx.rs  json.rs  option_time_ser.rs  option_time_ser_test.rs  rect.rs  rect_test.rs  result.rs  test_util.rs  time_ser_test.rs  with_id.rs
src-tauri/src/: app_state.rs  app_state_test.rs  collection.rs  commands.rs  config.rs  lib.rs  osm_reader.rs  task_handler.rs  task_manager.rs  utils.rs
src-tauri/src/gpx_analyzer/: segments.rs
src-tauri/src/ski_area/: piste.rs  piste_test.rs
src-tauri/src/utils/: delayed_action.rs  event.rs  json_file_saver.rs  saveable.rs  saveable_test.rs
src/app/: actions.service.ts  app.component.css  app.component.html  app.component.scss  app.component.ts  app.config.ts  main-menu.component.css  main-menu.component.html  main-menu.component.ts  map.component.ts  map.service.ts  mapStyles.ts  name-input-dialog.component.html  name-input-dialog.component.ts  name-value.component.ts  selection-info.component.ts
src/app/components/: cached-ski-area-item.component.css  cached-ski-area-item.component.html  cached-ski-area-item.component.scss  cached-ski-area-item.component.ts  confirmation-dialog.component.html  confirmation-dialog.component.scss  confirmation-dialog.component.ts  debug-info.component.html  debug-info.component.scss  debug-info.component.ts  main-menu.component.css  main-menu.component.html  main-menu.component.scss  main-menu.component.ts  map.component.ts  name-input-dialog.component.css  name-input-dialog.component.html  name-input-dialog.component.ts  name-value.component.html  name-value.component.scss  (+14 more)
src/gpx_analyzer/: segments.rs  segments_test.rs  test_util.rs  use_lift.rs  use_lift_test.rs
src/ski_area/: bounded_geometry.rs  lift.rs  lift_test.rs  piste.rs  piste_test.rs
(+24 files in other folders)
