[package]
name = "ski-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.45"
url = "2.5.0"
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
geo = { version = "0.27.0", features = ["use-serde"] }
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5.3", features = ["derive"] }
