[package]
name = "ski-analyzer"
version = "0.1.0"
description = "Ski Analyzer"
authors = ["you"]
license = ""
repository = "https://github.com/petersohn/ski-analyzer"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-log = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ski-analyzer-lib = { path = "ski-analyzer-lib" }
log = "0.4"
tauri-plugin-dialog = "2.0.0-rc"
gpx = "0.10.0"
geo = { version = "0.29.0", features = ["serde"] }
time = { version = "0.3.36", features = ["macros", "parsing"] }
