[package]
name = "ski-analyzer-lib"
version = "0.1.0"
edition = "2021"
description = "Ski Analyzer Lib"
authors = ["you"]
license = ""
repository = "https://github.com/petersohn/ski-analyzer"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ski_analyzer_lib"
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "ski-analyzer-cli"

[dependencies]
curl = "0.4.45"
url = "2.5.0"
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
log = "0.4"
geo = { version = "0.29.0", features = ["use-serde"] }
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5.3", features = ["derive"] }
topological-sort = "0.2.2"
gpx = { version = "0.10.0", features = ["use-serde"] }
time = { version = "0.3.36", features = ["formatting"] }
num = "0.4.3"
num-traits = "0.2.19"
function_name = "0.3.0"

[dev-dependencies]
rstest = "0.19.0"
